--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "backk",
+  "name": "storage-reservation-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend API for storage space reservation system",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "node test-api.js"
   },
-  "keywords": [],
+  "keywords": ["storage", "reservation", "api", "express", "mongodb"],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
