--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "storage-reservation-backend",
+  "name": "backk",
   "version": "1.0.0",
-  "description": "Backend API for storage space reservation system",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "node test-api.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["storage", "reservation", "api", "express", "mongodb"],
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "engines": {
-    "node": ">=14.0.0"
-  },
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
